# pwfl

./: .gitignore  Dockerfile  INSTALL.md  README.md  REQUIREMENTS.md  STATUS.md  analyze_tests.py  check_cg_build.py  check_cg_events.py  check_cg_pr.py  check_events.py  check_tcp.py  compare.py  docker_pwfl.py  evaluation.py  example.ipynb  general.py  get_analysis.py  get_call_graph.py  get_call_graph_events.py  get_events.py  get_metrics.py  get_page_rank.py  get_prfl.py  get_prfl_summary.py  get_summary.py  helper.py  middle.py  middle_mapping.json  need_investigation.json  need_investigation_tcp.json  p_values.json  pyproject.toml  remove_pytest_cov.py  requirements.txt  run_small_eval.py  setup.py  summary.json  summary_prfl.json  summary_tcp.json  (+3 more)
call_graphs/: ansible_1.json  ansible_10.json  ansible_10_lines.json  ansible_10_pr.json  ansible_11.json  ansible_11_lines.json  ansible_11_pr.json  ansible_12.json  ansible_12_lines.json  ansible_12_pr.json  ansible_13.json  ansible_13_lines.json  ansible_13_pr.json  ansible_14.json  ansible_14_lines.json  ansible_14_pr.json  ansible_15.json  ansible_15_lines.json  ansible_15_pr.json  ansible_16.json  ansible_16_lines.json  ansible_16_pr.json  ansible_17.json  ansible_17_lines.json  ansible_17_pr.json  ansible_18_pr.json  ansible_1_lines.json  ansible_1_pr.json  ansible_2.json  ansible_2_lines.json  ansible_2_pr.json  ansible_3.json  ansible_3_lines.json  ansible_4.json  ansible_4_lines.json  ansible_4_pr.json  ansible_5.json  ansible_5_lines.json  ansible_5_pr.json  ansible_6.json  (+885 more)
mappings/: thefuck_17_buggy_cg.json  thefuck_17_buggy_lines.json
middle/: tests.py
middle_tmp/: middle.py  tests.py
pwfl/: analyze.py  cg.py  check.py  evaluate.py  events.py  interpret.py  interprete.py  logger.py  prfl.py  purification.py  summarize.py  tests.py  utils.py
reports/: analysis_ansible.json  analysis_ansible_tcp.json  analysis_black.json  analysis_black_tcp.json  analysis_calculator.json  analysis_calculator_tcp.json  analysis_cookiecutter.json  analysis_cookiecutter_tcp.json  analysis_expression.json  analysis_expression_tcp.json  analysis_fastapi.json  analysis_fastapi_tcp.json  analysis_httpie.json  analysis_httpie_tcp.json  analysis_keras.json  analysis_keras_tcp.json  analysis_luigi.json  analysis_luigi_tcp.json  analysis_markup.json  analysis_markup_tcp.json  analysis_matplotlib.json  analysis_matplotlib_tcp.json  analysis_middle.json  analysis_middle_tcp.json  analysis_pysnooper.json  analysis_pysnooper_tcp.json  analysis_sanic.json  analysis_sanic_tcp.json  analysis_scrapy.json  analysis_scrapy_tcp.json  analysis_spacy.json  analysis_spacy_tcp.json  analysis_thefuck.json  analysis_thefuck_tcp.json  analysis_tornado.json  analysis_tornado_tcp.json  analysis_tqdm.json  analysis_tqdm_tcp.json  analysis_youtubedl.json  analysis_youtubedl_tcp.json  (+179 more)
results/: ansible_1.json  ansible_10.json  ansible_10_clean_tcp.json  ansible_10_pr.json  ansible_10_tcp.json  ansible_11.json  ansible_11_clean_tcp.json  ansible_11_pr.json  ansible_11_tcp.json  ansible_12.json  ansible_12_clean_tcp.json  ansible_12_pr.json  ansible_12_tcp.json  ansible_13.json  ansible_13_clean_tcp.json  ansible_13_pr.json  ansible_13_tcp.json  ansible_14.json  ansible_14_clean_tcp.json  ansible_14_pr.json  ansible_14_tcp.json  ansible_15.json  ansible_15_pr.json  ansible_15_tcp.json  ansible_16.json  ansible_16_clean_tcp.json  ansible_16_pr.json  ansible_16_tcp.json  ansible_17.json  ansible_17_clean_tcp.json  ansible_17_pr.json  ansible_17_tcp.json  ansible_18.json  ansible_18_pr.json  ansible_18_tcp.json  ansible_1_clean_tcp.json  ansible_1_pr.json  ansible_1_tcp.json  ansible_2.json  ansible_2_clean_tcp.json  (+1080 more)
results_new/: ansible_13.json  ansible_14.json  ansible_16.json  ansible_18.json  ansible_5.json  black_14.json  black_16.json  black_17.json  black_19.json  black_2.json  black_20.json  black_23.json  black_3.json  black_5.json  black_9.json  cookiecutter_2.json  cookiecutter_4.json  fastapi_1.json  fastapi_11.json  fastapi_12.json  fastapi_13.json  fastapi_14.json  fastapi_5.json  fastapi_6.json  fastapi_9.json  httpie_3.json  keras_1.json  keras_13.json  keras_23.json  keras_24.json  keras_26.json  keras_30.json  keras_32.json  keras_34.json  keras_35.json  keras_36.json  keras_37.json  keras_38.json  keras_4.json  keras_41.json  (+89 more)
sflkit-lib-extension/: pyproject.toml  setup.cfg
test-purification/: LICENSE  README.md  pyproject.toml
test-purification/src/tcp/: __init__.py  cli.py  logger.py  pcov.py  purification.py  slicer.py
test-purification/tests/: test_class_check.py  test_class_purification.py  test_nested_assertions.py  test_no_assertion_handling.py  test_parameterized_purification.py  test_path_resolution.py  test_purification.py  test_purification_example.py  test_purification_slicer_integration.py  test_purification_unit.py  test_purified_file_copying.py  test_simple_assertion.py  test_simple_class_check.py  test_single_assertion_fix.py  test_single_test_extraction.py  test_slicer_functionality.py  test_slicer_integration.py  test_slicing.py  test_subdirectory_preservation.py
(+1140 files in other folders)
