[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pwfl"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "PWFL: Optimizing Fault Localization with Test Line Proximity"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "tests4py>=0.0.13",
    "seaborn>=0.13.2",
    "pytest>=8.3.3",
    "numpy>=2.1.3",
    "sflkit>=0.3.5",
]



[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=15.0",
    "parameterized>=0.9.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
