[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pwfl"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "PWFL: Optimizing Fault Localization with Test Line Proximity"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "tests4py>=0.0.13",
    "seaborn>=0.13.2",
    "pytest>=9.0.3",
    "numpy>=2.4.4",
    "sflkit>=0.5.7",
    "pyurify>=0.0.1",
]

[tool.black]
line-length = 88
target-version = ['py310']
