[metadata]
name = sflkitlib
version = attr: sflkitlib.__version__
description = Lib for SFLKit: : A Workbench for Statistical Fault Localization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.extras_require]
test =
dev =