[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tcp"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "TCP: Test Case Purification for Improving Fault Localization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "pytest>=8.3.4",
    "coverage>=7.13.2",
]

[project.scripts]
tcp = "tcp.cli:main"

[project.optional-dependencies]
test = [
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=15.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
