[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tcp"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "TCP"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=15.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
